<resources>
    <string name="app_name">Mini eCommerce</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="new_arrivals">New Arrivals</string>
    <string name="view_all">View All</string>
    <string name="all_products">All Products</string>
    <string name="top_categories">Top Categories</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="description">Description</string>
    <string name="cart">Cart</string>
    <string name="share">Share</string>
    <string name="share_via">Share Via</string>
    <string name="error_occurred">An error occurred</string>
    <string name="hey_there">Hey, this item is going for GHS&#160;</string>
    <string name="checkout">Checkout</string>
    <string name="remove">Remove</string>
    <string name="trash">Trash</string>
    <string name="orders">Orders</string>
    <string name="track">Track</string>
    <string name="set_new_price">Set New Price</string>
    <string name="set_price">Set a new price before sharing</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Sign In</string>
    <string name="forgot_phone_number">Forgot Phone Number</string>
    <string name="new_to_mini_ecommerce">New to Mini ecommerce?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_new_account">Create new account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_success">Sign in successful</string>
    <string name="sign_up_successful">Sign up successful</string>
    <string name="total_ghs_20_00">GHS 250.00</string>
    <string name="search_categories">Search Categories</string>
    <string name="search_products">Search Products</string>
    <string name="add_to_wishlist">Add To Wishlist</string>
    <string name="quantity">Quantity</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Fermentum dui faucibus in ornare quam. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Nunc lobortis mattis aliquam faucibus purus in massa tempor nec. Dolor morbi non arcu risus quis varius quam. Elementum pulvinar etiam non quam lacus suspendisse. Auctor urna nunc id cursus. Proin fermentum leo vel orci porta non pulvinar neque laoreet. Id eu nisl nunc mi ipsum faucibus. Morbi enim nunc faucibus a pellentesque. Fermentum odio eu feugiat pretium nibh ipsum. Sit amet dictum sit amet justo donec. Tristique magna sit amet purus gravida quis blandit. Vulputate odio ut enim blandit volutpat. Id diam vel quam elementum pulvinar etiam non quam lacus. In aliquam sem fringilla ut morbi. Purus faucibus ornare suspendisse sed nisi lacus sed viverra. Mi proin sed libero enim sed faucibus turpis. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec. Aliquet enim tortor at auctor urna.</string>
    <string name="total_amount">Total Amount</string>
    <string name="amount">Amount:&#160;</string>
    <string name="place_order">Place Order</string>
    <string name="nii_kwafio_street_sraha_police_station">Nii Kwafio Street, Sraha Police Station</string>
    <string name="order_items">Order Items</string>
    <string name="subtotal">Sub Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="ghs_10_00">GHS 10.00</string>
    <string name="payment_options">Payment Options</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="online">Online</string>
    <string name="default1">Default</string>
    <string name="change">Change</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="debit_cards">Debit Cards</string>
    <string name="one_item">1 Item</string>
    <string name="go_home">Go Home</string>
    <string name="congratulations">Congratulations!!!</string>
    <string name="your_order_has_been_taken_and_being_attended_to">Your order has been taken and being attended to</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="track_order">Track Order</string>
    <string name="order_success">Order Success</string>


</resources>