<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.sammy.miniecommerce.ui.fragments.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/home_fragment" >
        <action
            android:id="@+id/action_homeFragment_to_productsFragment"
            app:destination="@id/productsFragment" />
        <action
            android:id="@+id/action_homeFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_cartFragment"
            app:destination="@id/cartFragment" />

    </fragment>

    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.sammy.miniecommerce.ui.fragments.category.CategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/category_fragment" >
        <action
            android:id="@+id/action_categoryFragment_to_productsFragment"
            app:destination="@id/productsFragment" />
        <action
            android:id="@+id/action_categoryFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/productsFragment"
        android:name="com.sammy.miniecommerce.ui.fragments.products.ProductsFragment"
        android:label="ProductsFragment">
        <argument
            android:name="category"
            app:argType="string"/>
        <action
            android:id="@+id/action_productsFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment" />
        <action
            android:id="@+id/action_productsFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.sammy.miniecommerce.ui.fragments.productdetail.ProductDetailFragment"
        android:label="ProductDetailFragment" >

        <argument
            android:name="product"
            app:argType="com.sammy.miniecommerce.models.Product"/>
        <action
            android:id="@+id/action_productDetailFragment_to_cartFragment"
            app:destination="@id/cartFragment" />

    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.sammy.miniecommerce.ui.fragments.cart.CartFragment"
        android:label="CartFragment" >
        <action
            android:id="@+id/action_cartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
    </fragment>
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.sammy.miniecommerce.ui.fragments.orders.OrdersFragment"
        android:label="@string/orders" />
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.sammy.miniecommerce.ui.fragments.checkout.CheckoutFragment"
        android:label="@string/checkout"
        tools:layout="@layout/checkout_fragment" >
        <action
            android:id="@+id/action_checkoutFragment_to_orderSuccessFragment"
            app:destination="@id/orderSuccessFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderSuccessFragment"
        android:name="com.sammy.miniecommerce.ui.fragments.ordersuccess.OrderSuccessFragment"
        android:label="@string/order_success" >
        <action
            android:id="@+id/action_orderSuccessFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

</navigation>