<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/lyt_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/spacing_mxxlarge"
                android:paddingRight="@dimen/spacing_mxxlarge">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:padding="@dimen/spacing_medium"
                    android:src="@drawable/logo"
                    android:contentDescription="@null" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/Custom.Headings"
                    android:textSize="@dimen/font_18"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_xlarge"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/priceLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:textAppearance="@style/Custom.Body.Bold"
                        android:text="@string/phone_number"/>

                    <EditText
                        android:id="@+id/etPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:labelFor="@+id/priceLabel"
                        style="@style/EditText.Default"
                        android:inputType="phone"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mxlarge"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btLogin"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:text="@string/login" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/tv_forgot_password"
                    style="@style/Button.Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/forgot_phone_number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_to_mini_ecommerce"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textAppearance="@style/Custom.Body"/>

                    <View
                        android:layout_width="@dimen/spacing_medium"
                        android:layout_height="0dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/tv_signup"
                        style="@style/Button.Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/primaryDarkColor"
                        android:text="@string/sign_up" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
