<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/lyt_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.registration.SignupActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center_vertical"
                android:padding="@dimen/spacing_large">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logo"
                    android:contentDescription="@null" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_new_account"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:textAppearance="@style/Custom.Body"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nameLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Custom.Body.Bold"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:text="@string/name"/>

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:labelFor="@+id/nameLabel"
                        style="@style/EditText.Default"
                        android:inputType="text"
                        android:importantForAutofill="no" />


                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/emailLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Custom.Body.Bold"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:text="@string/email"/>

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="@dimen/spacing_xmlarge"
                        android:labelFor="@+id/nameLabel"
                        style="@style/EditText.Default"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no" />

                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_large"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/phoneLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/Custom.Body.Bold"
                        android:layout_marginBottom="@dimen/spacing_medium"
                        android:text="@string/phone_number"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:background="@drawable/edit_text_bg">

                        <TextView
                            android:id="@+id/tvCountryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/Custom.Body.Bold"
                            android:layout_marginBottom="@dimen/spacing_medium"
                            android:text="+233"
                            android:paddingHorizontal="@dimen/spacing_large"/>

                        <EditText
                            android:id="@+id/etPhone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:minHeight="@dimen/spacing_xmlarge"
                            android:labelFor="@+id/phoneLabel"
                            style="@style/EditText.NoBackground"
                            android:inputType="phone"
                            android:importantForAutofill="no" />

                    </LinearLayout>



                </LinearLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btSignup"
                    style="@style/Button.Default"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:text="@string/sign_up" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_mlarge"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textAppearance="@style/Custom.Body"/>

                    <View
                        android:layout_width="@dimen/spacing_medium"
                        android:layout_height="0dp"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/tv_signin"
                        style="@style/Button.Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/primaryDarkColor"
                        android:text="@string/login" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
