<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvUserName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="5dp"
                        android:layout_toStartOf="@+id/tvDefult"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:gravity="start"
                        android:paddingEnd="5dp"
                        android:singleLine="true"
                        android:textAppearance="@style/Custom.Headings"
                        android:textSize="16sp"
                        android:text="Peter Ayambire" />

                    <TextView

                        android:id="@+id/tvType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginHorizontal="10dp"
                        android:background="@drawable/bg_round"
                        android:backgroundTint="@color/orange_alpha"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="2dp"
                        android:text="@string/default1"
                        android:textColor="@color/primaryColor"
                        android:textAppearance="@style/Custom.Body" />

                    <TextView
                        android:id="@+id/tvDefult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/bg_round_gradient"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="2dp"
                        android:text="@string/change"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvUserName"
                    android:layout_marginEnd="10dp"
                    android:text="@string/nii_kwafio_street_sraha_police_station"
                    android:textAppearance="@style/Custom.Body" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/call"
                    app:tint="@color/primaryDarkColor" />

                <TextView
                    android:id="@+id/tvMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textAppearance="@style/Custom.Body"
                    android:text="233547578965"
                    tools:text="0000000000" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>